plugins {
    id 'java'
    id 'application'
}

group = 'camp.nextstep.edu'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'com.github.woowacourse-projects:mission-utils:1.2.0'
}

test {
    useJUnitPlatform()
}

// 모든 Java 컴파일 작업에 대해 UTF-8 인코딩을 사용하도록 설정
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

// 테스트 작업에서도 UTF-8 인코딩을 사용하도록 설정
tasks.withType(Test) {
    systemProperty 'file.encoding', 'UTF-8'
}
// build.gradle

application {
    // 기존 설정이 있다면 유지하고, 아래 줄을 추가
    applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]
}
